html sceleton for content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
 </head>
 
 <body>
+   
+   <section class="introduction">
+   </section>
+   
+   <section class="study-program">
+   </section>
+   
+           <div class="modal-production1">
+           </div>
+           <div class="modal-production2">
+           </div>
+           <div class="modal-production3">
+           </div>
+           <div class="modal-electives">
+           </div>
+           <div class="modal-internship">
+           </div>
+           <div class="modal-final-exam">
+           </div>
+           
+
+           <div class="modal-business">
+           </div>
+           <div class="modal-communication">
+           </div>
+           <div class="modal-design">
+           </div>
+           <div class="modal-development">
+           </div>
+       
+   <section class="admission">
+   </section>
+   
+   <section class="study-abroad">
+   </section>
+   
+   <section class="exam">
+   </section>
+   
+   <section class="career">
+   </section>
+   
+   <section class="contact">
+   </section>
+
+
 
 </body>
 
