--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Cur2</title>
 </head>
+<!--Celia-->
+<nav>
+    
+</nav>
 
 <body>
-   
+   <!-- Emily -->
    <section class="introduction">
    </section>
    
    <section class="study-program">
    </section>
-   
+        <!--Weronika-->
            <div class="modal-production1">
            </div>
            <div class="modal-production2">
@@ -38,10 +42,10 @@
            </div>
            <div class="modal-development">
            </div>
-       
+   <!-- Celia -->    
    <section class="admission">
    </section>
-   
+   <!-- Emily -->
    <section class="study-abroad">
    </section>
    
