--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                <aside class="modal-content">
                    <h2 class="modal-title">Electives <span class="ects-points">10 ECTS</span></h2>
                    <ul class="list-internship">
-                      There are 5 different types of internships:
+                      <span class="list-title">There are 5 different types of internships:</span>
                        <li>Workplace Internship</li>
                        <li>International Internship</li>
                        <li>Project-based Internship</li>
