new divided tasks

--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Cur2</title>
 </head>
-<!--Celia-->
 <nav>
-    
+   <!-- done --> 
 </nav>
 
 <body>
    <!-- Emily -->
    <section class="introduction">
    </section>
-   
+   <!-- Weronika -->
    <section class="study-program">
    </section>
-        <!--Weronika-->
+        <!--done-->
            <div class="modal-production1">
            </div>
            <div class="modal-production2">
@@ -33,7 +32,7 @@
            <div class="modal-final-exam">
            </div>
            
-
+           <!-- done -->
            <div class="modal-business">
            </div>
            <div class="modal-communication">
@@ -48,13 +47,14 @@
    <!-- Emily -->
    <section class="study-abroad">
    </section>
-   
-   <section class="exam">
+   <!-- Celia -->
+   <section class="student-life">
    </section>
-   
+   <!-- Emily -->
    <section class="career">
    </section>
    
+   <!-- Weronika -->
    <section class="contact">
    </section>
 
