study program - first step

--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
     </section>
 
     <section class="study-program">
+    <div class="study-title-1">
+        Study program
+    </div>
+    <div class="study-content">
+            The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
+    </div>
+    <div class="study-title-2">
+        Core Areas
+    </div>
+    <div class="cores">
+        CORES
+    </div>
+    <div class="study-title-2">
+        Program Structure
+    </div>
+    <div class="study-content">
+            The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
+    </div>
+    <div class="time">
+        2 years /  4 semesters / 120 ECTS
+    </div>
+    <div class="table">
+        
+    </div>
+    
     </section>
 
 
