--- a/index.html
+++ b/index.html
@@ -221,6 +221,80 @@
 
     <!-- Celia -->
     <section class="admission">
+    <div class="admission-title">
+        Admission
+    </div>
+    <div class="admission-desc">
+        <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
+
+        <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
+        
+        <p>The programme is connected to the Coordinated Enrolment System (KOT). You can be enrolled either in Quota 1 or Quota 2.</p>
+    </div>
+    <div class="adm-container">
+        <div class="adm-first-col">
+            <h5 class="adm-elem">Admission Requirements Quota 1</h5>
+            <p class="elem-cont">
+                Quota 1 means you will be accepted based on your qualifications from your upper-secondary education. Quota 2 means you will be accepted based on your overall qualifications, including any possible qualifying training.
+            </p>
+            <h5 class="adm-elem">Admission Requirements Quota 2</h5>
+            <p class="elem-cont">
+                <ul>
+                    Quota 2 admissions are allocated according to the following criteria:
+                    <li>Work experience, minimum 30 hours per week – including internships and national service. The internship must, however, not have been part of your entry qualification. Documentation must be included in the form of either work contracts, pay slips or employer statements.</li>
+                    <li>Other activities, minimum 3 months. E.g. Folk High School stay or stay abroad experiences (not holidays). Voluntary work equal to 3 months full-time employment can also be included. Documentation in the form of either diplomas, contracts, plane tickets, travel itinerary or certified statements are a requirement.</li>
+                    <li>Grade average from your upper secondary school exam.</li>
+                    <li>Relevant IT courses, e.g.: Adobe Photoshop, Adobe Illustrator, HTML, CSS, Javascript, drawing, animation </li>
+                </ul>
+            </p>
+            <h5 class="adm-elem">Language Requirements</h5>
+            <p class="elem-cont">
+                All applicants must have passed English at a level equivalent to a Danish Upper Secondary education B-level.
+            </p>
+            <h5 class="adm-elem">Application Fee</h5>
+            <p class="elem-cont">
+                Non-EU applicants are required to pay an application fee in order for KEA to process their application. 
+            </p>
+            <h5 class="adm-elem">Admission Special Permission</h5>
+            <p class="elem-cont">
+                If you do not meet the formal admission requirements, you can apply for admission with special permission based on an individual competency assessment (IKV)
+            </p>
+        </div>
+        <div class="adm-snd-col">
+            <h5 class="adm-elem">How to Apply?</h5>
+            <p class="elem-cont">
+                <b>Summer-intake: </b> All applicants must apply online on <a href="http://www.optagelse.dk/">www.optagelse.dk</a>.
+                <br>
+                <b>Winter-intake:</b> All applicants have to apply online <a href="https://pocloudwesteurope.crm.powerobjects.net/powerwebform/powerwebform.aspx?t=vreFsKvp0USJXcTvdEsBvGIAMAA4ADUAYgA3AGIAZQBlADkAYQBiADQANABkADEAOAA5ADUAZABjADQAZQBmADcANAA0AGIAMAAxAGIAYwA%3D&formId=powf_8FA2FFE7BB36E5118110C4346BAD81DC&tver=2013"> here</a>
+            </p>
+            <h5 class="adm-elem">Program Start Summer</h5>
+            <p class="elem-cont">
+                August 27th 2018
+            </p>
+            <h5 class="adm-elem">Program Start Winter</h5>
+            <p class="elem-cont">
+                January 29th 2018
+            </p>
+            <h5 class="adm-elem">Application Deadline</h5>
+            <p class="adm-elem">
+                <b>For summer intake:</b>
+                <br>All applicants can apply from February 1st.
+                <br>The deadline for quota 1 admission is July 5th at 12:00 CET. (Danish students only). 
+                <br>The deadline for quota 2 is March 15th at 12:00 CET. (Overseas, European and Danish students).
+                <br>
+                <br>
+                <b>For winter intake:</b>
+                <br>All applicants can apply from September 15th.
+                <br>The deadline for overseas students is October 15th at 12:00 CET. 
+                <br>Final answer will be given November 15th.
+                <br>Deadline for all other students is December 1st at 12:00 CET (both quotas 1 and 2). Final answer will be given December 22nd. 
+            </p>
+            <h5 class="adm-elem">Transfer Requirements</h5>
+            <p class="elem-cont">
+                More information <a href="http://www.kea.dk/en/en/study-at-kea/transfer-to-kea/">here</a>
+            </p>
+        </div>
+    </div>
     </section>
     <!-- Emily -->
     <section class="study-abroad">
