fix error with admission section

--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
         </div>
         <div class="adm-container">
             <div class="adm-first-col">
-                <h5 class="adm-elem">Admission Requirements Quota 1</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem1">Admission Requirements Quota 1</h5>
+                <p class="elem-cont hide">
                     Quota 1 means you will be accepted based on your qualifications from your upper-secondary education. Quota 2 means you will be accepted based on your overall qualifications, including any possible qualifying training.
                 </p>
-                <h5 class="adm-elem">Admission Requirements Quota 2</h5>
-                <div class="elem-cont">
+                <h5 class="adm-elem2">Admission Requirements Quota 2</h5>
+                <div class="elem-cont hide">
                     <ul>
                         Quota 2 admissions are allocated according to the following criteria:
                         <li>Work experience, minimum 30 hours per week – including internships and national service. The internship must, however, not have been part of your entry qualification. Documentation must be included in the form of either work contracts, pay slips or employer statements.</li>
@@ -248,36 +248,36 @@
                         <li>Relevant IT courses, e.g.: Adobe Photoshop, Adobe Illustrator, HTML, CSS, Javascript, drawing, animation </li>
                     </ul>
                 </div>
-                <h5 class="adm-elem">Language Requirements</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem3">Language Requirements</h5>
+                <p class="elem-cont hide">
                     All applicants must have passed English at a level equivalent to a Danish Upper Secondary education B-level.
                 </p>
-                <h5 class="adm-elem">Application Fee</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem4">Application Fee</h5>
+                <p class="elem-cont hide">
                     Non-EU applicants are required to pay an application fee in order for KEA to process their application.
                 </p>
-                <h5 class="adm-elem">Admission Special Permission</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem5">Admission Special Permission</h5>
+                <p class="elem-cont hide">
                     If you do not meet the formal admission requirements, you can apply for admission with special permission based on an individual competency assessment (IKV)
                 </p>
             </div>
             <div class="adm-snd-col">
-                <h5 class="adm-elem">How to Apply?</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem6">How to Apply?</h5>
+                <p class="elem-cont hide">
                     <b>Summer-intake: </b> All applicants must apply online on <a href="http://www.optagelse.dk/">www.optagelse.dk</a>.
                     <br>
                     <b>Winter-intake:</b> All applicants have to apply online <a href="https://pocloudwesteurope.crm.powerobjects.net/powerwebform/powerwebform.aspx?t=vreFsKvp0USJXcTvdEsBvGIAMAA4ADUAYgA3AGIAZQBlADkAYQBiADQANABkADEAOAA5ADUAZABjADQAZQBmADcANAA0AGIAMAAxAGIAYwA%3D&formId=powf_8FA2FFE7BB36E5118110C4346BAD81DC&tver=2013"> here</a>
                 </p>
-                <h5 class="adm-elem">Program Start Summer</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem7">Program Start Summer</h5>
+                <p class="elem-cont hide">
                     August 27th 2018
                 </p>
-                <h5 class="adm-elem">Program Start Winter</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem8">Program Start Winter</h5>
+                <p class="elem-cont hide">
                     January 29th 2018
                 </p>
-                <h5 class="adm-elem">Application Deadline</h5>
-                <p class="adm-elem">
+                <h5 class="adm-elem9">Application Deadline</h5>
+                <p class="elem-cont hide">
                     <b>For summer intake:</b>
                     <br>All applicants can apply from February 1st.
                     <br>The deadline for quota 1 admission is July 5th at 12:00 CET. (Danish students only).
@@ -290,8 +290,8 @@
                     <br>Final answer will be given November 15th.
                     <br>Deadline for all other students is December 1st at 12:00 CET (both quotas 1 and 2). Final answer will be given December 22nd.
                 </p>
-                <h5 class="adm-elem">Transfer Requirements</h5>
-                <p class="elem-cont">
+                <h5 class="adm-elem10">Transfer Requirements</h5>
+                <p class="elem-cont hide">
                     More information <a href="http://www.kea.dk/en/en/study-at-kea/transfer-to-kea/">here</a>
                 </p>
             </div>
@@ -347,5 +347,6 @@
             </p>
         </div>
     </section>
+    <script src="js/main.js"></script>
     </body>
 </html>
