style front, intro and study program

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="logo-front">
-        
+
     </div>
     <nav>
 
@@ -23,95 +23,99 @@
         <a href="#">Contact</a>
     </nav>
     <!-- front -->
-    <section class="front">
-     <div class="intro-square">
-         <p class="title">
-            <br>MULTIMEDIA
-            <br>DESIGN +
-            <br>COMMUNICATION
-            <br>MMD            
-         </p>
-     </div>
+    <section class="front hide">
+        <div class="front-square">
+            <p class="title">
+                <br>MULTIMEDIA
+                <br>DESIGN +
+                <br>COMMUNICATION
+                <br>MMD
+            </p>
+        </div>
     </section>
     <!-- introduction -->
     <section class="introduction hide">
 
-        <h1>MULTIMEDIA DESIGN + COMMUNICATION (MMD)</h1>
+        <div class="img-header img-intro">
+            <p class="title-section">
+                MULTIMEDIA DESIGN
+                <br>AND COMMUNICATION</p>
+        </div>
+        <div class="intro-container">
+            <h2>What is Multimedia Design and Communication?</h2>
 
-        <img class="headerImg" src="img/introduction%20(1).png" alt="intro">
+            <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
-        <h2>What is Multimedia Design and Communication?</h2>
-
-        <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
-
-        <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
-
+            <p>During your studies you are in close contact with businesses when creating projects and writing papers in cooperation with a specific company or organisation. During the studies you will have an internship period at a company in order to mobilise your competencies in practice. We cooperate with a wide range of business types including agencies, companies, and cultural organisations.</p>
+        </div>
     </section>
     <!-- study program -->
-    <section class="study-program hide">
-        <div class="study-title-1">
-            Study program
+    <section class="study-program">
+        <div class="img-header img-program">
+            <p class="title-section">
+                STUDY PROGRAM
+            </p>
         </div>
-        <div class="study-content">
-            The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
-        </div>
-        <div class="study-title-2">
-            Core Areas
-        </div>
-        <div class="cores">
-            CORES
-        </div>
-        <div class="study-title-2">
-            Program Structure
-        </div>
-        <div class="study-content">
-            The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
-        </div>
-        <div class="time">
-            2 years / 4 semesters / 120 ECTS
-        </div>
-        <div class="table">
-            <div class="year">
-                First Year
+        <div class="study-container">
+            <div class="study-title-2">
+                Core Areas
             </div>
-            <div class="semester">
-                1st Semester
+            <div class="study-content">
+                The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
             </div>
-            <div class="semester">
-                2nd Semester
+            <div class="cores">
+                CORES
             </div>
-            <div class="project">
-                Multimedia Production 1
+            <div class="study-title-2">
+                Program Structure
             </div>
-            <div class="project">
-                Multimedia Production 2
+            <div class="study-content">
+                The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
             </div>
+            <div class="time">
+                2 years / 4 semesters / 120 ECTS
+            </div>
+            <div class="table">
+                <div class="year">
+                    First Year
+                </div>
+                <div class="semester">
+                    1st Semester
+                </div>
+                <div class="semester">
+                    2nd Semester
+                </div>
+                <div class="project">
+                    Multimedia Production 1
+                </div>
+                <div class="project">
+                    Multimedia Production 2
+                </div>
 
-            <div class="year">
-                Second Year
-            </div>
-            <div class="semester">
-                3rd Semester
-            </div>
-            <div class="semester">
-                4th Semester
-            </div>
-            <div class="project">
-                Multimedia Production 3
-            </div>
-            <div class="project">
-                Internship
-            </div>
-            <div class="project">
-                Electives
-            </div>
-            <div class="project">
-                Final Exam
-            </div>
+                <div class="year">
+                    Second Year
+                </div>
+                <div class="semester">
+                    3rd Semester
+                </div>
+                <div class="semester">
+                    4th Semester
+                </div>
+                <div class="project">
+                    Multimedia Production 3
+                </div>
+                <div class="project">
+                    Internship
+                </div>
+                <div class="project">
+                    Electives
+                </div>
+                <div class="project">
+                    Final Exam
+                </div>
 
-
+            </div>
         </div>
-
     </section>
 
     <!-- mmd-production 1 -->
