admission and study abroad section plus some comments

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </section>
     <!-- study program -->
-    <section class="study-program">
+    <section class="study-program hide">
         <div class="img-header img-program">
             <p class="title-section">
                 STUDY PROGRAM
@@ -244,127 +244,138 @@
 
     <!-- admission -->
     <section class="admission hide">
-        <div class="admission-title">
-            Admission
+        <div class="img-header img-admission">
+            <p class="title-section">
+                ADMISSION
+            </p>
         </div>
-        <div class="admission-desc">
-            <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
+        <div class="admission-container">
+            <div class="admission-desc">
+                <p>An education equivalent to a Danish upper secondary education or relevant vocational education is required (English B and Math C must be included).</p>
 
-            <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
+                <p>Mathematics C-level is required in order to apply for the AP Degree in Multimedia Design and Communication. The Mathematics C-level is represented by 125 hours during the last three years of upper-secondary school (equivalent to the Danish C-level of a Danish upper-secondary examination</p>
 
-            <p>The programme is connected to the Coordinated Enrolment System (KOT). You can be enrolled either in Quota 1 or Quota 2.</p>
-        </div>
-        <div class="adm-container">
-            <div class="adm-first-col">
-                <h5 class="adm-elem1">Admission Requirements Quota 1</h5>
-                <p class="elem-cont hide">
-                    Quota 1 means you will be accepted based on your qualifications from your upper-secondary education. Quota 2 means you will be accepted based on your overall qualifications, including any possible qualifying training.
-                </p>
-                <h5 class="adm-elem2">Admission Requirements Quota 2</h5>
-                <div class="elem-cont hide">
-                    <ul>
-                        Quota 2 admissions are allocated according to the following criteria:
-                        <li>Work experience, minimum 30 hours per week – including internships and national service. The internship must, however, not have been part of your entry qualification. Documentation must be included in the form of either work contracts, pay slips or employer statements.</li>
-                        <li>Other activities, minimum 3 months. E.g. Folk High School stay or stay abroad experiences (not holidays). Voluntary work equal to 3 months full-time employment can also be included. Documentation in the form of either diplomas, contracts, plane tickets, travel itinerary or certified statements are a requirement.</li>
-                        <li>Grade average from your upper secondary school exam.</li>
-                        <li>Relevant IT courses, e.g.: Adobe Photoshop, Adobe Illustrator, HTML, CSS, Javascript, drawing, animation </li>
-                    </ul>
-                </div>
-                <h5 class="adm-elem3">Language Requirements</h5>
-                <p class="elem-cont hide">
-                    All applicants must have passed English at a level equivalent to a Danish Upper Secondary education B-level.
-                </p>
-                <h5 class="adm-elem4">Application Fee</h5>
-                <p class="elem-cont hide">
-                    Non-EU applicants are required to pay an application fee in order for KEA to process their application.
-                </p>
-                <h5 class="adm-elem5">Admission Special Permission</h5>
-                <p class="elem-cont hide">
-                    If you do not meet the formal admission requirements, you can apply for admission with special permission based on an individual competency assessment (IKV)
-                </p>
+                <p>The programme is connected to the Coordinated Enrolment System (KOT). You can be enrolled either in Quota 1 or Quota 2.</p>
             </div>
-            <div class="adm-snd-col">
-                <h5 class="adm-elem6">How to Apply?</h5>
-                <p class="elem-cont hide">
-                    <b>Summer-intake: </b> All applicants must apply online on <a href="http://www.optagelse.dk/">www.optagelse.dk</a>.
-                    <br>
-                    <b>Winter-intake:</b> All applicants have to apply online <a href="https://pocloudwesteurope.crm.powerobjects.net/powerwebform/powerwebform.aspx?t=vreFsKvp0USJXcTvdEsBvGIAMAA4ADUAYgA3AGIAZQBlADkAYQBiADQANABkADEAOAA5ADUAZABjADQAZQBmADcANAA0AGIAMAAxAGIAYwA%3D&formId=powf_8FA2FFE7BB36E5118110C4346BAD81DC&tver=2013"> here</a>
-                </p>
-                <h5 class="adm-elem7">Program Start Summer</h5>
-                <p class="elem-cont hide">
-                    August 27th 2018
-                </p>
-                <h5 class="adm-elem8">Program Start Winter</h5>
-                <p class="elem-cont hide">
-                    January 29th 2018
-                </p>
-                <h5 class="adm-elem9">Application Deadline</h5>
-                <p class="elem-cont hide">
-                    <b>For summer intake:</b>
-                    <br>All applicants can apply from February 1st.
-                    <br>The deadline for quota 1 admission is July 5th at 12:00 CET. (Danish students only).
-                    <br>The deadline for quota 2 is March 15th at 12:00 CET. (Overseas, European and Danish students).
-                    <br>
-                    <br>
-                    <b>For winter intake:</b>
-                    <br>All applicants can apply from September 15th.
-                    <br>The deadline for overseas students is October 15th at 12:00 CET.
-                    <br>Final answer will be given November 15th.
-                    <br>Deadline for all other students is December 1st at 12:00 CET (both quotas 1 and 2). Final answer will be given December 22nd.
-                </p>
-                <h5 class="adm-elem10">Transfer Requirements</h5>
-                <p class="elem-cont hide">
-                    More information <a href="http://www.kea.dk/en/en/study-at-kea/transfer-to-kea/">here</a>
-                </p>
+            <div class="adm-container">
+                <div class="adm-first-col">
+                    <h5 class="adm-elem1">Admission Requirements Quota 1</h5>
+                    <p class="elem-cont hide">
+                        Quota 1 means you will be accepted based on your qualifications from your upper-secondary education. Quota 2 means you will be accepted based on your overall qualifications, including any possible qualifying training.
+                    </p>
+                    <h5 class="adm-elem2">Admission Requirements Quota 2</h5>
+                    <div class="elem-cont hide">
+                        <ul class="list-adm">
+                            Quota 2 admissions are allocated according to the following criteria:
+                            <li>Work experience, minimum 30 hours per week – including internships and national service. The internship must, however, not have been part of your entry qualification. Documentation must be included in the form of either work contracts, pay slips or employer statements.</li>
+                            <li>Other activities, minimum 3 months. E.g. Folk High School stay or stay abroad experiences (not holidays). Voluntary work equal to 3 months full-time employment can also be included. Documentation in the form of either diplomas, contracts, plane tickets, travel itinerary or certified statements are a requirement.</li>
+                            <li>Grade average from your upper secondary school exam.</li>
+                            <li>Relevant IT courses, e.g.: Adobe Photoshop, Adobe Illustrator, HTML, CSS, Javascript, drawing, animation </li>
+                        </ul>
+                    </div>
+                    <h5 class="adm-elem3">Language Requirements</h5>
+                    <p class="elem-cont hide">
+                        All applicants must have passed English at a level equivalent to a Danish Upper Secondary education B-level.
+                    </p>
+                    <h5 class="adm-elem4">Application Fee</h5>
+                    <p class="elem-cont hide">
+                        Non-EU applicants are required to pay an application fee in order for KEA to process their application.
+                    </p>
+                    <h5 class="adm-elem5">Admission Special Permission</h5>
+                    <p class="elem-cont hide">
+                        If you do not meet the formal admission requirements, you can apply for admission with special permission based on an individual competency assessment (IKV)
+                    </p>
+                </div>
+                <div class="adm-snd-col">
+                    <h5 class="adm-elem6">How to Apply?</h5>
+                    <p class="elem-cont hide">
+                        <b>Summer-intake: </b> All applicants must apply online on <a href="http://www.optagelse.dk/">www.optagelse.dk</a>.
+                        <br>
+                        <b>Winter-intake:</b> All applicants have to apply online <a href="https://pocloudwesteurope.crm.powerobjects.net/powerwebform/powerwebform.aspx?t=vreFsKvp0USJXcTvdEsBvGIAMAA4ADUAYgA3AGIAZQBlADkAYQBiADQANABkADEAOAA5ADUAZABjADQAZQBmADcANAA0AGIAMAAxAGIAYwA%3D&formId=powf_8FA2FFE7BB36E5118110C4346BAD81DC&tver=2013"> here</a>
+                    </p>
+                    <h5 class="adm-elem7">Program Start Summer</h5>
+                    <p class="elem-cont hide">
+                        August 27th 2018
+                    </p>
+                    <h5 class="adm-elem8">Program Start Winter</h5>
+                    <p class="elem-cont hide">
+                        January 29th 2018
+                    </p>
+                    <h5 class="adm-elem9">Application Deadline</h5>
+                    <p class="elem-cont hide">
+                        <b>For summer intake:</b>
+                        <br>All applicants can apply from February 1st.
+                        <br>The deadline for quota 1 admission is July 5th at 12:00 CET. (Danish students only).
+                        <br>The deadline for quota 2 is March 15th at 12:00 CET. (Overseas, European and Danish students).
+                        <br>
+                        <br>
+                        <b>For winter intake:</b>
+                        <br>All applicants can apply from September 15th.
+                        <br>The deadline for overseas students is October 15th at 12:00 CET.
+                        <br>Final answer will be given November 15th.
+                        <br>Deadline for all other students is December 1st at 12:00 CET (both quotas 1 and 2). Final answer will be given December 22nd.
+                    </p>
+                    <h5 class="adm-elem10">Transfer Requirements</h5>
+                    <p class="elem-cont hide">
+                        More information <a href="http://www.kea.dk/en/en/study-at-kea/transfer-to-kea/">here</a>
+                    </p>
+                </div>
             </div>
         </div>
     </section>
     <!-- study abroad -->
-    <section class="study-abroad hide">
+    <section class="study-abroad">
+        <div class="img-header img-abroad">
+            <p class="title-section">
+                STUDY ABROAD
+            </p>
+        </div>
+        <div class="abroad-container">
+            <div class="images-container">
+                <div class="img1"></div>
+                <div class="img2"></div>
+                <div class="img3"></div>
+                <div class="img4"></div>
+            </div>
 
-        <h1>STUDY ABROAD</h1>
+            <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students. </p>
 
-        <img class="headerImg" src="img/study-abroad.png" alt="study_abroad">
+            <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. </p>
 
-        <img src="img/Griffith.png" alt="griffith">
-        <img src="img/korea.png" alt="korea">
-        <img src="img/lisbon.png" alt="lisbon">
-        <img src="img/napier.png" alt="napier">
+            <div class="country-container">
+                <div class="country">
+                    <h3> AUSTRALIA</h3>
+                    Melbourne Deakin University
 
-        <p>KEA has formed partnership agreements with a large number of educational institutions in Europe and overseas. The European institutions are all certified under the ERASMUS charter and are available for study exchange for KEA's students. </p>
+                    <h3>BRAZIL</h3>
+                    Sao Paulo Senac University
 
-        <p>Here are a list of just some of the fantastic institutions available for Multimedia Design + Communication. (For the complete list you can find it HERE.) </p>
+                    <h3>CANADA</h3>
+                    Toronto Ryerson University
 
-        <h2> AUSTRALIA</h2>
-        <h3>Melbourne Deakin University</h3>
+                    <h3>IRELAND</h3>
+                    Dublin Griffith College
+                </div>
+                <div class="country">
+                    <h3>KOREA </h3>
+                    Seoul Konkuk University
 
-        <h2>BRAZIL</h2>
-        <h3>Sao Paulo Senac University</h3>
+                    <h3>PORTUGAL</h3>
+                    Lisboa IADE
 
-        <h2>CANADA</h2>
-        <h3>Toronto Ryerson University</h3>
+                    <h3>SPAIN </h3>
+                    Barcelona Universitat Ramon Llul ESDI
 
-        <h2>IRELAND</h2>
-        <h3>Dublin Griffith College</h3>
+                    <h3>USA</h3>
+                    Purchase, NY Purchase College (SUNY)
+                </div>
+            </div>
 
-        <h2>KOREA </h2>
-        <h3>Seoul Konkuk University</h3>
+            <p> Having passed the first-year exam, students can choose to complete either the entire programme or parts of it abroad. KEA offers multiple possibilities for international study, including the fourth semester internship. </p>
 
-        <h2>PORTUGAL</h2>
-        <h3>Lisboa IADE </h3>
-
-        <h2>SPAIN </h2>
-        <h3>Barcelona Universitat Ramon Llul ESDI</h3>
-
-        <h2>USA</h2>
-        <h3>Purchase, NY Purchase College (SUNY)</h3>
-
-
-        <p> Having passed the first-year exam, students can choose to complete either the entire programme or parts of it abroad. KEA offers multiple possibilities for international study, including the fourth semester internship. </p>
-
-        <p>According to the 7-point grading scale at the institution where the exam has been taken and is equivalent to a programme element in this curriculum, the grade may be transferred.
-        </p>
-
+            <p>According to the 7-point grading scale at the institution where the exam has been taken and is equivalent to a programme element in this curriculum, the grade may be transferred.
+            </p>
+        </div>
     </section>
     <!-- student life -->
     <section class="student-life hide">
