add interactive navigation

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     </div>
     <nav>
 
-        <a href="#">Introduction</a>
-        <a href="#">Study Program</a>
-        <a href="#">Admission</a>
-        <a href="#">Study Abroad</a>
-        <a href="#">Student Life</a>
-        <a href="#">Career</a>
-        <a href="#">Contact</a>
+        <a href="#" id="intro-nav">Introduction</a>
+        <a href="#" id="program-nav">Study Program</a>
+        <a href="#" id="adm-nav">Admission</a>
+        <a href="#" id="abroad-nav">Study Abroad</a>
+        <a href="#" id="student-nav">Student Life</a>
+        <a href="#" id="career-nav">Career</a>
+        <a href="#" id="contact-nav">Contact</a>
     </nav>
     <!-- front -->
-    <section class="front hide">
+    <section id="front" class="front">
         <div class="front-square">
             <p class="title">
                 <br>MULTIMEDIA
@@ -34,7 +34,7 @@
         </div>
     </section>
     <!-- introduction -->
-    <section class="introduction hide">
+    <section id="introduction" class="introduction hide">
 
         <div class="img-header img-intro">
             <p class="title-section">
@@ -50,7 +50,7 @@
         </div>
     </section>
     <!-- study program -->
-    <section class="study-program hide">
+    <section id="program" class="study-program hide">
         <div class="img-header img-program">
             <p class="title-section">
                 STUDY PROGRAM
@@ -243,7 +243,7 @@
     </div>
 
     <!-- admission -->
-    <section class="admission hide">
+    <section id="admission" class="admission hide">
         <div class="img-header img-admission">
             <p class="title-section">
                 ADMISSION
@@ -324,7 +324,7 @@
         </div>
     </section>
     <!-- study abroad -->
-    <section class="study-abroad hide">
+    <section id="abroad" class="study-abroad hide">
         <div class="img-header img-abroad">
             <p class="title-section">
                 STUDY ABROAD
@@ -378,7 +378,7 @@
         </div>
     </section>
     <!-- student life -->
-    <section class="student-life hide">
+    <section id="student" class="student-life hide">
         <div class="img-header img-life">
             <p class="title-section">STUDENT LIFE </p>
         </div>
@@ -399,7 +399,7 @@
         </div>
     </section>
     <!-- career -->
-    <section class="career hide">
+    <section id="career" class="career hide">
 
         <div class="title-career-container">
             <div>
@@ -425,7 +425,7 @@
         </div>
     </section>
     <!-- contact -->
-    <section class="contact">
+    <section id="contact" class="contact hide">
         <div class="img-header img-contact">
             <p class="title-section">CONTACT</p>
         </div>
