imrpove margin on section intro and program

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <br>AND COMMUNICATION</p>
         </div>
         <div class="intro-container">
-            <h2>What is Multimedia Design and Communication?</h2>
+            <h2 class="sub-section">What is Multimedia Design and Communication?</h2>
 
             <p>The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business. You learn to work with frontend development, User Interface Design (UI), User Experience Design (UX) and you understanding the business context.</p>
 
@@ -57,18 +57,18 @@
             </p>
         </div>
         <div class="study-container">
-            <div class="study-title-2">
+            <h2 class="sub-section">
                 Core Areas
-            </div>
+            </h2>
             <div class="study-content">
                 The multimedia design programme is built on four core areas: Interaction development, design and visualisation, communication and presentation and business.
             </div>
             <div class="cores">
                 CORES
             </div>
-            <div class="study-title-2">
+            <h2 class="sub-section">
                 Program Structure
-            </div>
+            </h2>
             <div class="study-content">
                 The instruction is based on projects, which provide a basis for understanding practice, and the tasks are normally carried out in groups. Classroom instruction is gradually being replaced by advisor-based instruction.
             </div>
@@ -92,6 +92,7 @@
                     Multimedia Production 2
                 </div>
 
+               
                 <div class="year">
                     Second Year
                 </div>
@@ -113,7 +114,6 @@
                 <div class="project">
                     Final Exam
                 </div>
-
             </div>
         </div>
     </section>
